--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,7 +96,7 @@
         80
     ],
     "window.zoomLevel": 0,
-    "latex-workshop.latex.recipe.default": "lastUsed",
+    "latex-workshop.latex.recipe.default": "first",
     "cSpell.userWords": [
 
     ],
